; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-db/extr_rmsgpack_dom.c_rmsgpack_dom_read.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-db/extr_rmsgpack_dom.c_rmsgpack_dom_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rmsgpack_dom_value = type { i32 }
%struct.dom_reader_state = type { %struct.rmsgpack_dom_value**, i64 }

@dom_reader_callbacks = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rmsgpack_dom_read(i32* %0, %struct.rmsgpack_dom_value* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.rmsgpack_dom_value*, align 8
  %5 = alloca %struct.dom_reader_state, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.rmsgpack_dom_value* %1, %struct.rmsgpack_dom_value** %4, align 8
  store i32 0, i32* %6, align 4
  %7 = getelementptr inbounds %struct.dom_reader_state, %struct.dom_reader_state* %5, i32 0, i32 1
  store i64 0, i64* %7, align 8
  %8 = load %struct.rmsgpack_dom_value*, %struct.rmsgpack_dom_value** %4, align 8
  %9 = getelementptr inbounds %struct.dom_reader_state, %struct.dom_reader_state* %5, i32 0, i32 0
  %10 = load %struct.rmsgpack_dom_value**, %struct.rmsgpack_dom_value*** %9, align 8
  %11 = getelementptr inbounds %struct.rmsgpack_dom_value*, %struct.rmsgpack_dom_value** %10, i64 0
  store %struct.rmsgpack_dom_value* %8, %struct.rmsgpack_dom_value** %11, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @rmsgpack_read(i32* %12, i32* @dom_reader_callbacks, %struct.dom_reader_state* %5)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %2
  %17 = load %struct.rmsgpack_dom_value*, %struct.rmsgpack_dom_value** %4, align 8
  %18 = call i32 @rmsgpack_dom_value_free(%struct.rmsgpack_dom_value* %17)
  br label %19

19:                                               ; preds = %16, %2
  %20 = load i32, i32* %6, align 4
  ret i32 %20
}

declare dso_local i32 @rmsgpack_read(i32*, i32*, %struct.dom_reader_state*) #1

declare dso_local i32 @rmsgpack_dom_value_free(%struct.rmsgpack_dom_value*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
